# bottle

./: .gitignore  AGENTS.md  BOOTSTRAP.md  Cargo.toml  README.md  SPEC.md  dist-workspace.toml
.ba/: config.json  issues.jsonl
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: create.md  eject.md  getting-started.md  help.md  init.md  install.md  integrate.md  list.md  status.md  switch.md  update.md  workflow.md
.github/workflows/: ci.yml  release.yml  sync-plugins.yml
.wm/: dive_context.md
bottles/edge/: CHANGELOG.md  manifest.json
bottles/example-team/: AGENTS.md.example  README.md  SETUP.md  bootstrap.sh  manifest.json
bottles/stable/: CHANGELOG.md  manifest.json
codex-skill/: AGENTS.md.snippet  README.md  SKILL.md
codex-skill/ba/: SKILL.md
codex-skill/scripts/: init.sh  status.sh
codex-skill/sg/: SKILL.md
codex-skill/wm/: SKILL.md
commands/: diff.md  eject.md  init.md  install.md  release.md  status.md  switch.md  update.md  upgrade.md  validate.md
docs/: bespoke.md  release-workflow-plan.md
opencode-plugin/: README.md  package.json  tsconfig.json
opencode-plugin/skills/: create.md  eject.md  help.md  init.md  install.md  integrate.md  list.md  status.md  switch.md  update.md
opencode-plugin/src/: ba.ts  index.ts  superego.ts
scripts/: install.sh  release.sh  test-local.sh  test-pr-build.sh  update-manifest.sh  update.sh
src/: error.rs  fetch.rs  main.rs  ui.rs
src/commands/: agents_md.rs  common.rs  create.rs  diff.rs  eject.rs  install.rs  integrate.rs  (+8 more)
tools/: ba.json  datasphere.json  oh-mcp.json  superego.json  wm.json
(+60 files in other folders)
